--- a/index.html
+++ b/index.html
@@ -255,6 +255,16 @@
         .excellent-metric {
             border-left-color: #7CC141;
         }
+
+        .improvement-badge {
+            background: linear-gradient(135deg, #7CC141, #419E46);
+            color: white;
+            padding: 3px 8px;
+            border-radius: 12px;
+            font-size: 0.8em;
+            font-weight: bold;
+            margin-left: 8px;
+        }
     </style>
 </head>
 <body>
@@ -265,9 +275,9 @@
 
     <div class="container">
         <div class="update-info">
-            <strong>🔄 Última actualización:</strong> 14 de Agosto 2025 |
-            <strong>📊 Datos procesados:</strong> 268 facturas de 98 clientes activos |
-            <strong class="positive-trend">📈 Situación Excelente</strong>
+            <strong>🔄 Última actualización:</strong> 18 de Agosto 2025 |
+            <strong>📊 Datos procesados:</strong> 242 facturas de 94 clientes activos |
+            <strong class="positive-trend">📈 Mejora Continua</strong>
         </div>
 
         <div class="nav-tabs">
@@ -283,33 +293,33 @@
             <div class="metrics-grid">
                 <div class="metric-card excellent-metric">
                     <h3>Total Facturas</h3>
-                    <div class="value">268</div>
-                    <div class="change">Facturas por cobrar</div>
+                    <div class="value">242</div>
+                    <div class="change">Facturas por cobrar <span class="improvement-badge">-26 vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Monto Total</h3>
-                    <div class="value">$7,968</div>
-                    <div class="change">Total por cobrar</div>
+                    <div class="value">$6,984</div>
+                    <div class="change">Total por cobrar <span class="improvement-badge">-$984 vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Clientes Activos</h3>
-                    <div class="value">98</div>
-                    <div class="change">Clientes únicos</div>
+                    <div class="value">94</div>
+                    <div class="change">Clientes únicos <span class="improvement-badge">-4 vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Promedio por Factura</h3>
-                    <div class="value">$29.73</div>
-                    <div class="change">Monto promedio</div>
+                    <div class="value">$28.86</div>
+                    <div class="change">Monto promedio <span class="improvement-badge">-$0.87 vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Días Promedio Cobro</h3>
-                    <div class="value positive-trend">23.4</div>
-                    <div class="change positive-trend">Excelente gestión</div>
+                    <div class="value positive-trend">18.9</div>
+                    <div class="change positive-trend">Excelente mejora <span class="improvement-badge">-4.5 días</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Facturas Vencidas</h3>
-                    <div class="value positive-trend">89</div>
-                    <div class="change positive-trend">33.2% del total</div>
+                    <div class="value positive-trend">59</div>
+                    <div class="change positive-trend">24.4% del total <span class="improvement-badge">-8.8% vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Ventas Mes Anterior</h3>
@@ -335,18 +345,18 @@
             </div>
 
             <div class="alert-section">
-                <div class="alert-title">Situación Financiera Excelente</div>
+                <div class="alert-title">Situación Financiera - Mejora Continua</div>
                 <div class="alert-item">
-                    <strong>Situación Óptima:</strong> Solo 89 facturas vencidas (33.2%) por $958.35 - <span class="positive-trend">Excelente gestión de cobros</span>
+                    <strong>Mejora Significativa:</strong> Solo 59 facturas vencidas (24.4%) por $652.66 - <span class="positive-trend">Reducción de 8.8% vs período anterior</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Cartera Saludable:</strong> 66.8% de facturas por vencer ($7,009.46) - <span class="positive-trend">Flujo de caja positivo</span>
+                    <strong>Cartera Optimizada:</strong> 75.6% de facturas por vencer ($6,331.18) - <span class="positive-trend">Mejora en flujo de caja</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Ratio CxC vs Ventas:</strong> 2.7% - <span class="positive-trend">Excelente indicador financiero</span>
+                    <strong>Ratio CxC vs Ventas:</strong> 2.4% - <span class="positive-trend">Mejora vs 2.7% anterior</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Diversificación:</strong> 98 clientes activos con concentración balanceada - <span class="positive-trend">Riesgo distribuido</span>
+                    <strong>Eficiencia de Cobro:</strong> 18.9 días promedio - <span class="positive-trend">Mejora de 4.5 días vs período anterior</span>
                 </div>
             </div>
         </div>
@@ -356,23 +366,23 @@
             <div class="metrics-grid">
                 <div class="metric-card excellent-metric">
                     <h3>Por Vencer</h3>
-                    <div class="value positive-trend">$7,009</div>
-                    <div class="change positive-trend">179 facturas (66.8%)</div>
+                    <div class="value positive-trend">$6,331</div>
+                    <div class="change positive-trend">183 facturas (75.6%) <span class="improvement-badge">+8.8% vs anterior</span></div>
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Vencida (0-30 días)</h3>
-                    <div class="value">$789</div>
-                    <div class="change">70 facturas (26.1%)</div>
+                    <div class="value">$620</div>
+                    <div class="change">56 facturas (23.1%) <span class="improvement-badge">-3.0% vs anterior</span></div>
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Vencida (31-60 días)</h3>
-                    <div class="value">$169</div>
-                    <div class="change">19 facturas (7.1%)</div>
+                    <div class="value">$33</div>
+                    <div class="change">3 facturas (1.2%) <span class="improvement-badge">-5.9% vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Vencida (61+ días)</h3>
                     <div class="value positive-trend">$0</div>
-                    <div class="change positive-trend">0 facturas (0%)</div>
+                    <div class="change positive-trend">0 facturas (0%) <span class="improvement-badge">Mantiene excelencia</span></div>
                 </div>
             </div>
 
@@ -382,15 +392,15 @@
             </div>
 
             <div class="alert-section">
-                <div class="alert-title">Situación de Cobros - Excelente</div>
+                <div class="alert-title">Situación de Cobros - Mejora Continua</div>
                 <div class="alert-item">
-                    <strong>Gestión Sobresaliente:</strong> <span class="positive-trend">66.8% de facturas por vencer</span> - Indicador de excelente gestión
+                    <strong>Gestión Mejorada:</strong> <span class="positive-trend">75.6% de facturas por vencer</span> - Mejora de 8.8% vs período anterior
                 </div>
                 <div class="alert-item">
-                    <strong>Vencimientos Controlados:</strong> Solo $958.35 en facturas vencidas - <span class="positive-trend">Situación muy favorable</span>
+                    <strong>Vencimientos Reducidos:</strong> Solo $652.66 en facturas vencidas - <span class="positive-trend">Reducción de $305.69 vs anterior</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Sin Morosidad Crítica:</strong> <span class="positive-trend">0 facturas con más de 60 días</span> - Excelente control de cartera
+                    <strong>Sin Morosidad Crítica:</strong> <span class="positive-trend">0 facturas con más de 60 días</span> - Mantiene excelente control
                 </div>
             </div>
         </div>
@@ -400,48 +410,48 @@
             <div class="chart-container">
                 <div class="chart-title">Top 10 Clientes por Monto Pendiente</div>
                 <div style="text-align: center; font-size: 0.9em; color: #666; margin-bottom: 15px; font-style: italic;">
-                    (*) Los valores incluyen facturas por vencer y vencidas
+                    (*) Los valores incluyen facturas por vencer y vencidas - Actualización 18 de Agosto
                 </div>
                 <div class="client-list">
                     <div class="client-item">
                         <div class="client-name">1. INSTITUTO DIAGNISTICO SAN BERNARDINO</div>
-                        <div class="client-amount">$1,434.18</div>
+                        <div class="client-amount">$1,612.44</div>
                     </div>
                     <div class="client-item">
                         <div class="client-name">2. AC CENTRO MEDICO DOCENTE LA TRINIDAD</div>
-                        <div class="client-amount">$1,423.16</div>
+                        <div class="client-amount">$1,438.72</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">3. BANCO DEL TESORO CA</div>
-                        <div class="client-amount">$1,069.54</div>
+                        <div class="client-name">3. MIRANDA GAS MIRANGAS SA</div>
+                        <div class="client-amount">$296.91</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">4. MIRANDA GAS MIRANGAS SA</div>
-                        <div class="client-amount">$448.79</div>
+                        <div class="client-name">4. BANCO DEL TESORO CA</div>
+                        <div class="client-amount">$283.42</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">5. JOSE CLAVIER</div>
-                        <div class="client-amount">$229.09</div>
+                        <div class="client-name">5. MARIA CLAVIER</div>
+                        <div class="client-amount">$210.89</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">6. Jesus Enrique Navarro Rosales</div>
-                        <div class="client-amount">$206.36</div>
-                    </div>
-                    <div class="client-item">
-                        <div class="client-name">7. INSTITUTO CUMBRES</div>
+                        <div class="client-name">6. INSTITUTO CUMBRES</div>
                         <div class="client-amount">$205.45</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">8. MARIA CLAVIER</div>
-                        <div class="client-amount">$168.78</div>
+                        <div class="client-name">7. AC CENTRO MEDICO DOCENTE LA TRINIDAD (Sucursal)</div>
+                        <div class="client-amount">$151.93</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">9. Miriam Zulay Contreras De Alayon</div>
-                        <div class="client-amount">$115.01</div>
+                        <div class="client-name">8. Jesus Enrique Navarro Rosales</div>
+                        <div class="client-amount">$137.48</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">10. AMERICA HIDALGO DE ZAMBRANO</div>
-                        <div class="client-amount">$101.67</div>
+                        <div class="client-name">9. Maria Eugenia Blanco Lauria</div>
+                        <div class="client-amount">$119.22</div>
+                    </div>
+                    <div class="client-item">
+                        <div class="client-name">10. Miriam Zulay Contreras De Alayon</div>
+                        <div class="client-amount">$104.55</div>
                     </div>
                 </div>
             </div>
@@ -483,17 +493,17 @@
                 <div class="metric-card excellent-metric">
                     <h3>Riesgo Alto</h3>
                     <div class="value positive-trend">$0</div>
-                    <div class="change positive-trend">0 facturas</div>
+                    <div class="change positive-trend">0 facturas <span class="improvement-badge">Mantiene excelencia</span></div>
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Riesgo Medio</h3>
-                    <div class="value">$3,557</div>
-                    <div class="change">26 facturas</div>
+                    <div class="value">$2,573</div>
+                    <div class="change">7 facturas <span class="improvement-badge">-19 facturas vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Riesgo Bajo</h3>
                     <div class="value positive-trend">$4,411</div>
-                    <div class="change positive-trend">242 facturas</div>
+                    <div class="change positive-trend">235 facturas <span class="improvement-badge">97.1% del total</span></div>
                 </div>
             </div>
 
@@ -503,18 +513,18 @@
             </div>
 
             <div class="alert-section">
-                <div class="alert-title">Gestión de Riesgo - Excelente</div>
+                <div class="alert-title">Gestión de Riesgo - Excelente Evolución</div>
                 <div class="alert-item">
-                    <strong>Sin Riesgo Alto:</strong> <span class="positive-trend">0 facturas de alto riesgo</span> - Excelente gestión preventiva
+                    <strong>Sin Riesgo Alto:</strong> <span class="positive-trend">0 facturas de alto riesgo</span> - Mantiene excelente gestión preventiva
                 </div>
                 <div class="alert-item">
-                    <strong>Riesgo Controlado:</strong> Solo 26 facturas de riesgo medio ($3,557) - <span class="positive-trend">Situación muy manejable</span>
+                    <strong>Riesgo Medio Reducido:</strong> Solo 7 facturas de riesgo medio ($2,573) - <span class="positive-trend">Reducción de 19 facturas vs anterior</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Cartera Saludable:</strong> 90.3% de facturas de bajo riesgo - <span class="positive-trend">Excelente calidad de cartera</span>
+                    <strong>Cartera Optimizada:</strong> 97.1% de facturas de bajo riesgo - <span class="positive-trend">Mejora vs 90.3% anterior</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Estrategia:</strong> Mantener políticas actuales de crédito y cobranza - <span class="positive-trend">Sistema funcionando óptimamente</span>
+                    <strong>Estrategia Exitosa:</strong> Las políticas implementadas muestran resultados positivos - <span class="positive-trend">Continuar con el enfoque actual</span>
                 </div>
             </div>
         </div>
@@ -564,7 +574,7 @@
         function renderOverviewCharts() {
             // Gráfico de torta - Estado de vencimiento
             const agingData = [{
-                values: [7009.46, 789.27, 169.08],
+                values: [6331.18, 619.74, 32.92],
                 labels: ['Por vencer', 'Vencida (0-30 días)', 'Vencida (31-60 días)'],
                 type: 'pie',
                 marker: {
@@ -582,8 +592,8 @@
 
             // Gráfico de barras - Top 5 clientes
             const topClientsData = [{
-                x: [1434.18, 1423.16, 1069.54, 448.79, 229.09],
-                y: ['INSTITUTO DIAGNISTICO SAN BERNARDINO', 'AC CENTRO MEDICO DOCENTE LA TRINIDAD', 'BANCO DEL TESORO CA', 'MIRANDA GAS MIRANGAS SA', 'JOSE CLAVIER'],
+                x: [1612.44, 1438.72, 296.91, 283.42, 210.89],
+                y: ['INSTITUTO DIAGNISTICO SAN BERNARDINO', 'AC CENTRO MEDICO DOCENTE LA TRINIDAD', 'MIRANDA GAS MIRANGAS SA', 'BANCO DEL TESORO CA', 'MARIA CLAVIER'],
                 type: 'bar',
                 orientation: 'h',
                 marker: {
@@ -605,14 +615,14 @@
             const agingDetailData = [
                 {
                     x: ['Por vencer', 'Vencida (0-30)', 'Vencida (31-60)', 'Vencida (61+)'],
-                    y: [179, 70, 19, 0],
+                    y: [183, 56, 3, 0],
                     name: 'Cantidad de Facturas',
                     type: 'bar',
                     marker: {color: locatelColors[0]}
                 },
                 {
                     x: ['Por vencer', 'Vencida (0-30)', 'Vencida (31-60)', 'Vencida (61+)'],
-                    y: [7009.46, 789.27, 169.08, 0],
+                    y: [6331.18, 619.74, 32.92, 0],
                     name: 'Monto ($)',
                     type: 'bar',
                     yaxis: 'y2',
@@ -632,7 +642,7 @@
         function renderClientCharts() {
             // Distribución por cliente (top 10 vs resto)
             const clientDistData = [{
-                values: [5300.02, 2667.79],
+                values: [4560.51, 2423.33],
                 labels: ['Top 10 Clientes', 'Otros Clientes'],
                 type: 'pie',
                 marker: {
@@ -648,7 +658,7 @@
             // Concentración de cobros
             const concentrationData = [{
                 x: ['Top 3', 'Top 5', 'Top 10', 'Todos'],
-                y: [49.0, 58.8, 66.5, 100],
+                y: [55.2, 58.4, 65.3, 100],
                 type: 'bar',
                 marker: {color: locatelColors[2]}
             }];
@@ -665,7 +675,7 @@
             // Evolución mensual
             const monthlyData = [{
                 x: ['Jun 2025', 'Jul 2025', 'Ago 2025'],
-                y: [85, 120, 63],
+                y: [85, 120, 37],
                 type: 'scatter',
                 mode: 'lines+markers',
                 line: {color: locatelColors[1], width: 3}
@@ -680,7 +690,7 @@
             // Distribución mensual
             const monthlyDistData = [{
                 x: ['Jun', 'Jul', 'Ago'],
-                y: [85, 120, 63],
+                y: [85, 120, 37],
                 type: 'bar',
                 marker: {color: locatelColors[2]}
             }];
@@ -694,7 +704,7 @@
             // Días de cobro promedio
             const collectionDaysData = [{
                 x: ['Promedio General'],
-                y: [23.4],
+                y: [18.9],
                 type: 'bar',
                 marker: {color: locatelColors[4]}
             }];
@@ -711,7 +721,7 @@
             // Matriz de riesgo
             const riskData = [{
                 x: ['Bajo', 'Medio', 'Alto'],
-                y: [4411.14, 3556.67, 0],
+                y: [4410.92, 2572.92, 0],
                 type: 'bar',
                 marker: {
                     color: ['#7CC141', '#F79617', '#dc3545']
